# yt-dl-app

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
