[package]
name = "yt-dl-app"
version = "0.1.0"
description = "yt-dl-app"
authors = ["tomheaton"]
license = "MIT"
repository = "https://github.com/tomheaton/yt-dl-app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "fs-exists", "fs-create-dir", "path-all", "fs-read-dir", "fs-write-file", "dialog-message", "fs-read-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustube = "0.6.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
